// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButton /> should render correctly 1`] = `
<div>
  <LoginSocialButton__LinkButton
    buttonColor="#fffeee"
    labelColor="#fff"
    type="facebook"
  >
    <SocialIcon
      className="loginIcon"
      name="facebook"
    />
    <a
      href="/login/facebook?_destination=http://localhost/"
      title="facebook"
    >
      <FormattedMessage
        id="Facebook"
        values={Object {}}
      />
    </a>
  </LoginSocialButton__LinkButton>
</div>
`;

exports[`<LoginSocialButton /> should render correctly franceConnect 1`] = `
<div>
  <Text
    fontSize={2}
    lineHeight="s"
    mt={1}
    textAlign="center"
  >
    <FormattedMessage
      id="fc-title"
      tagName="p"
      values={Object {}}
    />
  </Text>
  <LoginSocialButton__FranceConnectButton
    justifyContent="center"
  >
    <a
      href="/login/franceconnect?_destination=http://localhost/"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="FranceConnect"
    >
      <SocialIcon
        className="loginIcon"
        name="franceConnect"
      />
    </a>
  </LoginSocialButton__FranceConnectButton>
  <LoginSocialButton__FranceConnectLink
    justifyContent="center"
  >
    <a
      href="https://franceconnect.gouv.fr/"
      rel="noreferrer"
      target="_blank"
    >
      <FormattedMessage
        id="what-is-fc"
        values={Object {}}
      />
    </a>
    <hr />
  </LoginSocialButton__FranceConnectLink>
</div>
`;

exports[`<LoginSocialButton /> should render correctly with grandLyonConnect 1`] = `
<LoginSocialButton__GrandLyonConnectButton
  type="grandLyonConnect"
>
  <a
    href="/login/openid?_destination=http://localhost/"
    title="openId"
  >
    <SocialIcon
      className="loginIcon"
      name="grandLyonConnect"
    />
  </a>
</LoginSocialButton__GrandLyonConnectButton>
`;

exports[`<LoginSocialButton /> should render correctly with switchusermode 1`] = `
<div>
  <LoginSocialButton__LinkButton
    buttonColor="#fffeee"
    labelColor="#fff"
    type="openId"
  >
    <SocialIcon
      className="loginIcon"
      name="openId"
    />
    <a
      href="/login/openid?_destination=http://localhost/sso/switch-user"
      title="openId"
    >
      <span>
        openid
      </span>
    </a>
  </LoginSocialButton__LinkButton>
</div>
`;
